refactor:删除冗余代码 - 删除 gatewayHost 字段，改为启动时通过配置文件读取到Bean - 删除 cubicClient 字段，改为使用 调用SDK传入client - 优化一些逻辑缺陷